skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_paused.snap
---
source: tests/snapshot_overview.rs
expression: "render_fixture(\"paused\")"
---
"┌ flightdeck-dashboard ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck  session demo-paused  owner pi · %25 · /repo/demo  daemon: unknown  elapsed 3h10m  AH:0 ISS:1 WF:0  prompting:1   stale-warn 2m    PAUSED FOR USER                                        │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Daemon                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ selected detail ─────────────────────────┐"
"│States                    ││Kind    State        Harness    Title                     PR/worktree               Age      Last decision        Last activit││Resolve scope creep                       │"
"│prompting    1            ││ISS     prompting    pi         Resolve scope creep       PR #88 · vst-202          2h05m    scope-creep-detected 2m          ││id VST-202                                │"
"│                          ││                                                                                                                              ││kind issue  state prompting               │"
"│Merge queue               ││                                                                                                                              ││substate paused for user                  │"
"│• VST-202                 ││                                                                                                                              ││pane %42                                  │"
"│                          ││                                                                                                                              ││cwd /repo/worktrees/vst-202               │"
"│Conflict graph            ││                                                                                                                              ││                                          │"
"│• VST-202 ↔ VST-203       ││                                                                                                                              ││Issue domain                              │"
"│                          ││                                                                                                                              ││issue VST-202                             │"
"│                          ││                                                                                                                              ││PR #88                                    │"
"│                          ││                                                                                                                              ││worktree /repo/worktrees/vst-202          │"
"│                          ││                                                                                                                              ││scope declared=3 actual=12                │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││PAUSED FOR USER                           │"
"│                          ││                                                                                                                              ││reason scope-creep-detected               │"
"│                          ││                                                                                                                              ││prompt Actual files exceed declared scope.│"
"│                          ││                                                                                                                              ││Continue, descope, or abort?              │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Last decision                             │"
"│                          ││                                                                                                                              ││scope-creep-detected → Escalated to user  │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" Tab/Shift+Tab tabs  j/k select  r reload  Ctrl+N noisy:on  / filter:off  Alt+M compact  ? help  q quit                                                                                                 "
"                                                                                                                                                                                                        "
